--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.83.1",
+    "@backpackapp-io/react-native-toast": "^0.15.1",
+    "apisauce": "^3.2.2",
+    "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-device-info": "^15.0.1",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
