feat: add SF Pro Display fonts and integrate with asset management
- Added SF Pro Display font files to the project.
- Created link-assets-manifest.json to manage font assets.
- Updated react-native.config.js to include new font assets.
- Added new dependencies: react-native-asset, react-native-mmkv, and react-native-nitro-modules.
- Implemented base API structure with axios for network requests.
- Created utility functions for error handling and debounce.
- Introduced storage management with MMKV.
- Defined constants for storage keys and API routes.
- Updated TypeScript configuration for module resolution.

--- a/ios/TheMovieDB/Info.plist
+++ b/ios/TheMovieDB/Info.plist
@@ -34,7 +34,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -51,5 +51,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SF-Pro-Display-Black.otf</string>
+		<string>SF-Pro-Display-Bold.otf</string>
+		<string>SF-Pro-Display-Heavy.otf</string>
+		<string>SF-Pro-Display-Light.otf</string>
+		<string>SF-Pro-Display-Medium.otf</string>
+		<string>SF-Pro-Display-Regular.otf</string>
+		<string>SF-Pro-Display-Semibold.otf</string>
+		<string>SF-Pro-Display-Thin.otf</string>
+		<string>SF-Pro-Display-Ultralight.otf</string>
+	</array>
 </dict>
 </plist>
