--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-asset": "^2.2.8",
     "react-native-device-info": "^15.0.1",
+    "react-native-mmkv": "^4.1.2",
+    "react-native-nitro-modules": "^0.33.2",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
