--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
-    "react-native-asset": "^2.2.8",
     "react-native-device-info": "^15.0.1",
     "react-native-mmkv": "^4.1.2",
     "react-native-nitro-modules": "^0.33.2",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-svg": "^15.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
