--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   },
   "dependencies": {
     "@backpackapp-io/react-native-toast": "^0.15.1",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.11.0",
     "apisauce": "^3.2.2",
     "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-device-info": "^15.0.1",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-mmkv": "^4.1.2",
     "react-native-nitro-modules": "^0.33.2",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-svg": "^15.15.1"
+    "react-native-screens": "^4.20.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-worklets": "^0.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
