--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "apisauce": "^3.2.2",
+    "moment": "^2.30.1",
     "phosphor-react-native": "^3.0.2",
     "react": "19.2.0",
     "react-native": "0.83.1",
